@@ -165,6 +165,7 @@ class WSComms {
         this.rid = 1;
         this.reqas = {};
         this.evt = {};
+        this.ws = null;
         $asyncevent( this.evt, [ 'open' ] );
         this._waiting_open = false;
     }
@@ -194,7 +195,9 @@ class WSComms {
         const cleanup = ( event ) => {
             opts.disconnectSniffer( info );
             ws.close();
-            delete this.ws;
+            this.ws = null;
+            this.rid = 1;
+            this.reqas = {};
 
             for ( let k in reqas ) {
                 try {
@@ -206,9 +209,6 @@ class WSComms {
                     // ignore
                 }
             }
-
-            delete this.reqas;
-            this.reqas = {};
 
             this._waiting_open = false;
             ctx.native_iface.emit( 'disconnect' );
@@ -225,7 +225,6 @@ class WSComms {
 
         ws.onmessage = ( event ) => {
             let rsp = event.data;
-
             sniffer( info, rsp, true );
 
             const coder = MessageCoder.detect( rsp );
@@ -233,16 +232,19 @@ class WSComms {
             try {
                 rsp = coder.decode( rsp );
             } catch ( e ) {
+                console.log( 'WS Decode error', e.message, e );
                 // Ignore
                 return;
             }
 
             // Only multiplexing mode is expected for WebSockets
-            if ( 'rid' in rsp ) {
-                const rid = rsp.rid;
+            const rid = rsp.rid;
 
-                if ( rid in reqas ) {
-                    reqas[ rid ].success( rsp, true );
+            if ( rid ) {
+                const asi = reqas[ rid ];
+
+                if ( asi ) {
+                    asi.success( rsp, true );
                     delete reqas[ rid ];
                 } else if ( ( rid.charAt( 0 ) === 'S' ) && executor ) {
                     executor.onEndpointRequest(
@@ -258,11 +260,12 @@ class WSComms {
     close() {
         if ( this.ws ) {
             this.ws.close();
+            this.ws = null;
         }
     }
 
     perform( as, ctx, req ) {
-        if ( !( 'ws' in this ) ) {
+        if ( !this.ws ) {
             this.init( as, ctx );
         }
 
@@ -285,7 +288,7 @@ class WSComms {
     }
 
     _perform( as, ctx, req ) {
-        if ( !( 'ws' in this ) ) {
+        if ( !this.ws ) {
             as.error( FutoInError.CommError, 'Disconnect while in progress' );
         }
 
@@ -299,7 +302,9 @@ class WSComms {
         if ( ctx.expect_response ) {
             reqas[ rid ] = as;
 
-            as.setCancel( () => delete reqas[ rid ] );
+            as.setCancel( () => {
+                delete reqas[ rid ];
+            } );
         }
 
         const rawreq = ctx.msg_coder.encode( req );
