@@ -351,6 +351,7 @@ exports.WSComms = class WSComms {
             opts.disconnectSniffer( info );
             ws.close();
             this.ws = null;
+            this.rid = 1;
 
             for ( let as of reqas.values() ) {
                 try {
@@ -388,9 +389,9 @@ exports.WSComms = class WSComms {
             }
 
             // Only multiplexing mode is expected for WebSockets
-            if ( 'rid' in rsp ) {
-                const rid = rsp.rid;
+            const rid = rsp.rid;
 
+            if ( rid ) {
                 const as = reqas.get( rid );
 
                 if ( as ) {
