@@ -55,7 +55,7 @@
     "agentkeepalive": "^3.4.1",
     "detect-node": "^2.0.3",
     "faye-websocket": "^0.11.1",
-    "futoin-asyncevent": "^2.0.0",
+    "futoin-asyncevent": "^2.1.0",
     "lodash": "^4.17.10",
     "msgpack-lite": "^0.1.26",
     "performance-now": "^2.1.0",
@@ -71,7 +71,7 @@
     "cbor": "^4.1.0",
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
-    "futoin-asyncsteps": "^2.0.0",
+    "futoin-asyncsteps": "^2.1.1",
     "grunt": "^1.0.3",
     "grunt-babel": "^7.0.0",
     "grunt-contrib-connect": "^1.0.2",
@@ -85,10 +85,10 @@
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "server-destroy": "^1.0.1",
-    "webpack": "^4.11.0"
+    "webpack": "^4.12.0"
   },
   "peerDependencies": {
-    "futoin-asyncsteps": "^2.0.0"
+    "futoin-asyncsteps": "^2.1.1"
   },
   "optionalDependencies": {
     "borc": "^2.0.3"
