@@ -1,4 +1,7 @@
 
+=== (next) ===
+CHANGED: upgraded to futoin-asyncsteps v2.1 with burst execution feature
+
 === 1.10.0 (2018-06-06) ===
 CHANGED: to use performance-enhanced futoin-asyncsteps v2
 
